:100: UserResolver working perfectly

--- a/client/pages/profile/profile.page.html
+++ b/client/pages/profile/profile.page.html
@@ -6,7 +6,7 @@
   </header>
   <div class="grid">
     <div class="info-col">
-      <profile-details></profile-details>
+      <profile-details [user]="user"></profile-details>
     </div>
   </div>
 </div>
