--- a/client/pages/profile/profile.page.html
+++ b/client/pages/profile/profile.page.html
@@ -1,7 +1,10 @@
 <div class="profile">
   <header>
     <div class="avatar">
-      <img src="https://scontent.fbsb8-1.fna.fbcdn.net/v/t1.0-9/15085509_1188163171275486_701600910621853804_n.jpg?oh=68200a602f9b7588b7031b5ded7e8b2a&oe=59C19CAA">
+      <img [src]="user.avatar_url">
+      <upload allowerd="image/jpeg,image/png"
+        kind="avatar" (path)="onChangeAvatar($event)">
+      </upload>
     </div>
   </header>
   <div class="grid">
