--- a/client/pages/chat/chat.page.html
+++ b/client/pages/chat/chat.page.html
@@ -1,5 +1,5 @@
 <div class="group-message">
-  <div class="messages">
+  <div class="messages" #directMessages>
     <div class="gm" *ngFor="let message of messages">
       <div class="message-container" *ngIf="message">
         <div class="user">
