:wrench: early message chat

--- a/client/pages/chat/chat.page.html
+++ b/client/pages/chat/chat.page.html
@@ -1,5 +1,6 @@
 <div class="group-message">
   <div class="messages" #directMessages>
+    <p class="done">Início das mensagens</p>
     <div class="gm" *ngFor="let message of messages">
       <div class="message-container" *ngIf="message">
         <div class="user">
