--- a/client/pages/profile/profile.page.html
+++ b/client/pages/profile/profile.page.html
@@ -25,7 +25,7 @@
                         [editable]="user._id === currentUser._id">
       </profile-details>
       <requests [user]="user" [currentUser]="currentUser"
-                [request]="request">
+                [request]="request" [friend]="friend">
       </requests>
     </div>
   </div>
