--- a/client/pages/welcome/welcome.page.html
+++ b/client/pages/welcome/welcome.page.html
@@ -1,1 +1,23 @@
-test
+<div class="welcome">
+  <h1>Seja bem-vindo ao sistema Chat!</h1>
+  <span class="emoji">💪</span>
+  <p>"Chat" é um projeto realtime, de estudos, que utiliza as seguintes tecnologias:</p>
+  <ul>
+    <li class="orange"><a href="https://nodejs.org/en/" target="_blank">Node.js v >= 7</a></li>
+    <li class="blue"><a href="https://angular.io/" target="_blank">Angular.js v 4.0.0</a></li>
+    <li class="green"><a href="https://socket.io/" target="_blank">Socket.io</a></li>
+    <li class="purple"><a href="https://webpack.js.org/" target="_blank">Webpack</a></li>
+    <li class="gold"><a href="https://yarnpkg.com/pt-BR/" target="_blank">Yarn</a></li>
+    <li class="orange"><a href="http://sass-lang.com/" target="_blank">Sass</a></li>
+    <li class="blue"><a href="http://mongoosejs.com/" target="_blank">Mongoose</a></li>
+    <li class="green"><a href="http://passportjs.org" target="_blank">Passport.js</a></li>
+    <li class="purple"><a href="http://es6-features.org/" target="_blank">ES6</a></li>
+  </ul>
+
+  <div class="code-style">
+    <span>Code Style</span>
+    <a href="https://github.com/feross/standard" target="_blank">
+      <img src="https://cdn.rawgit.com/feross/standard/master/badge.svg">
+    </a>
+  </div>
+</div>
