Squashed commit of the following:
commit b0564b11a4c03a8a8739dd968a00b05075149a54
Author: Lucas Moreira <eskerlucas1@gmail.com>
Date:   Sat Jun 10 16:13:31 2017 -0300

    :hammer: remove user typing when he goest offline

commit 3135176860ab1539b61ef40f7b4683e7f852e9a3
Author: Lucas Moreira <eskerlucas1@gmail.com>
Date:   Sat Jun 10 13:51:29 2017 -0300

    :fix: remote foo is typing when user change chat room

commit a3118ed84855a77a3022afb9ec64700f9f9f7da2
Author: Lucas Moreira <eskerlucas1@gmail.com>
Date:   Sat Jun 10 10:30:04 2017 -0300

    :scissors: log

commit bd84496115efcc369f0cecce25790118b1fdc169
Author: Lucas Moreira <eskerlucas1@gmail.com>
Date:   Sat Jun 10 10:29:25 2017 -0300

    :bug: friend request bug

commit a82c3da08cabaeefe98225a01f97a4a9e656ad74
Author: Lucas Moreira <eskerlucas1@gmail.com>
Date:   Fri Jun 9 10:14:09 2017 -0300

    :hammer: typing position relative

commit 81ae9d3579ef19b056029981f06294995fe91f1f
Author: Lucas Moreira <eskerlucas1@gmail.com>
Date:   Fri Jun 9 00:04:46 2017 -0300

    :hammer: part of it working gr8

--- a/client/pages/chat/chat.page.html
+++ b/client/pages/chat/chat.page.html
@@ -18,8 +18,11 @@
       </div>
     </div>
   </div>
+  <div class="typing" *ngIf="typing">
+    <p>{{ this.user.username }} está digitando...</p>
+  </div>
   <form name="gm" class="send-gm" (ngSubmit)="sendMessage()">
-    <textarea [(ngModel)]="message.text" name="message" #textarea (keydown)="handleMessage($event)"></textarea>
+    <textarea [(ngModel)]="message.text" (ngModelChange)="handleTyping($event)" name="message" #textarea (keydown)="handleMessage($event)"></textarea>
     <button class="send" [disabled]="!message.text">
       Enviar 
     </button>
